--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,22 @@ body {
 }
 .frame {
 	margin: 0px;
+	z-index: -2;
+	/* pointer-events: none; */
 }
 .box {
 	border: 1px solid black;
-	padding: 3px;
+	padding: 7px;
+}
+
+iframe {
+	width: 100%;
+	height: 100%;
+}
+
+.secret-button {
+	position: absolute;
+	right: 80px;
+	top: 500px;
+	z-index: -1;
 }
