--- a/parcel-inferno.css
+++ b/parcel-inferno.css
@@ -1,1 +1,1 @@
-body{height:200%}.frame{margin:0}.box{border:1px solid #000;padding:3px}
+body{height:200%}.frame{margin:0;z-index:-2}.box{border:1px solid #000;padding:7px}iframe{width:100%;height:100%}.secret-button{position:absolute;right:80px;top:500px;z-index:-1}
